--- a/src/options/options.html
+++ b/src/options/options.html
@@ -26,7 +26,7 @@
         <a href="#tweets" class="nav-item -selected" data-lang="sec_tweetsName">Tweets: name & time</a>
         <a href="#tweetsDisplay" class="nav-item" data-lang="sec_tweetsDisplay">Tweets: display</a>
         <a href="#visual" class="nav-item" data-lang="sec_interface">Interface</a>
-        <a href="#btdContent" class="nav-item" data-lang="sec_content">Content</a>
+        <a href="#content" class="nav-item" data-lang="sec_content">Content</a>
         <a href="#share" class="nav-item" data-lang="shared_btd_h1">Sharing</a>
       </nav>
 
@@ -184,7 +184,7 @@
       <button class="save-button" disabled data-lang="save_no">No changes</button>
     </section>
 
-    <section class="content-block" id="btdContent">
+    <section class="content-block" id="content">
       <h2 class="section-title" data-lang="sec_content">Content</h2>
 
       <div class="settings-section">
