--- a/src/options/options.html
+++ b/src/options/options.html
@@ -220,7 +220,7 @@
           </li>
           <li data-setting-name="hotlink_item">
             <input type="checkbox" name="hotlink_item" id="hotlink_item">
-            <label for="hotlink_item" data-lang="hotlink_item" data-new-feat>Add shortcut to hotlink all tweet media or embeds</label>
+            <label for="hotlink_item" data-lang="hotlink_item" data-new-feat>Add shortcut to hotlink all tweet media</label>
           </li>
         </ul>
       </div>
