Added a button to download a tweet's media.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -222,6 +222,10 @@
             <input type="checkbox" name="hotlink_item" id="hotlink_item">
             <label for="hotlink_item" data-lang="hotlink_item" data-new-feat>Add shortcut to hotlink all tweet media</label>
           </li>
+          <li data-setting-name="download_item">
+            <input type="checkbox" name="download_item" id="download_item">
+            <label for="hotlink_item" data-lang="download_item" data-new-feat>Add shortcut to download all tweet media</label>
+          </li>
         </ul>
       </div>
 
