Added edit tweet menu item for tweets your tweets. Fixes #110

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -210,6 +210,10 @@
             <label for="regex_filter" data-lang="regex_filter" data-new-feat>Enable regular expression support in Mute filters</label>
             <br /><small data-lang="regex_filter_notice_text">Due to the way TweetDeck's filtering works, expressions are not case sensitive!</small>
           </li>
+          <li data-setting-name="edit_item">
+            <input type="checkbox" name="edit_item" id="edit_item">
+            <label for="edit_item" data-lang="edit_item" data-new-feat>Add an edit item in tweets' menu</label>
+          </li>
           <li data-setting-name="favstar_item">
             <input type="checkbox" name="favstar_item" id="favstar_item">
             <label for="favstar_item" data-lang="favstar_item" data-new-feat>Add a "Show in Favstar" item in tweets' menu</label>
