:bug: fix label name for download item in settings

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -224,7 +224,7 @@
           </li>
           <li data-setting-name="download_item">
             <input type="checkbox" name="download_item" id="download_item">
-            <label for="hotlink_item" data-lang="download_item" data-new-feat>Add shortcut to download all tweet media</label>
+            <label for="download_item" data-lang="download_item" data-new-feat>Add shortcut to download all tweet media</label>
           </li>
         </ul>
       </div>
