:gear: Allowed file name formats to be specified for downloaded files

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -226,6 +226,9 @@
             <input type="checkbox" name="download_item" id="download_item">
             <label for="download_item" data-lang="download_item" data-new-feat>Add shortcut to download all tweet media</label>
           </li>
+          <li data-setting-name="download_filename_format">
+            <input type="text" name="download_filename_format" id="download_filename_format"><label for="download_filename_format" data-lang="download_filename_format" data-new-feat>Download file name format</label>
+          </li>
         </ul>
       </div>
 
