:mushroom: Option to follow users upon ctrl+interacting with their tweets.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -231,6 +231,10 @@
             </br>
             <small data-lang="download_filename_format_parameters">You can use the following variables: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code></small>
           </li>
+          <li data-setting-name="ctrl_changes_interactions">
+            <input type="checkbox" name="ctrl_changes_interactions" id="ctrl_changes_interactions">
+            <label for="ctrl_changes_interactions" data-lang="ctrl_changes_interactions" data-new-feat>Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download / hotlink will follow the user from the column's owner.</label>
+          </li>
         </ul>
       </div>
 
