:pencil: Added a list of the variables that can be used in formats.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -228,6 +228,8 @@
           </li>
           <li data-setting-name="download_filename_format">
             <input type="text" name="download_filename_format" id="download_filename_format"><label for="download_filename_format" data-lang="download_filename_format" data-new-feat>Download file name format</label>
+            </br>
+            <small data-lang="download_filename_format_parameters">You can use the following variables: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code></small>
           </li>
         </ul>
       </div>
