--- a/src/options/options.html
+++ b/src/options/options.html
@@ -218,6 +218,10 @@
             <input type="checkbox" name="mute_hashtags" id="mute_hashtags">
             <label for="mute_hashtags" data-lang="mute_hashtags" data-new-feat>Add shortcuts to mute #hashtags in tweets' menu</label>
           </li>
+          <li data-setting-name="mute_source">
+            <input type="checkbox" name="mute_source" id="mute_source">
+            <label for="mute_source" data-lang="mute_source" data-new-feat>Add a shortcut to mute the source (application) of a tweet in tweets' menu</label>
+          </li>
           <li data-setting-name="hotlink_item">
             <input type="checkbox" name="hotlink_item" id="hotlink_item">
             <label for="hotlink_item" data-lang="hotlink_item" data-new-feat>Add shortcut to hotlink all tweet media</label>
