Added option to prevent columns from scrolling while hovered.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -312,6 +312,10 @@
             <input type="checkbox" name="css.slim_scrollbars" id="slim_scrollbars">
             <label for="slim_scrollbars" data-lang="css_slim_scrollbars">Thinner scrollbars</label>
           </li>
+          <li data-setting-name="pause_scroll_on_hover">
+            <input type="checkbox" name="pause_scroll_on_hover" id="pause_scroll_on_hover">
+            <label for="pause_scroll_on_hover" data-lang="pause_scroll_on_hover" data-new-feat>Pause column scrolling on hover</label>
+          </li>
           <li data-setting-name="no_bg_modal">
             <input type="checkbox" name="css.no_bg_modal" id="no_bg_modal">
             <label for="no_bg_modal" data-lang="css_no_bg_modal">Hide background behind fullscreen previews</label>
