Add warning regarding the custom width

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -290,7 +290,7 @@
         <ul>
           <li data-setting-name="old_replies">
             <input type="checkbox" name="old_replies" id="old_replies">
-            <label for="old_replies" data-lang="old_replies" data-new-feat>Revert to the old replies style (pre 03/30/2017)</label>
+            <label for="old_replies" data-lang="old_replies">Revert to the old replies style (pre 03/30/2017)</label>
           </li>
           <li data-setting-name="minimal_mode">
             <input type="checkbox" name="css.minimal_mode" id="minimal_mode">
@@ -298,17 +298,17 @@
           </li>
           <li data-setting-name="hide_url_thumb">
             <input type="checkbox" name="css.hide_url_thumb" id="hide_url_thumb">
-            <label for="hide_url_thumb" data-lang="css_hide_url_thumb" data-new-feat>Hide link related to thumbnails in tweet (à la Twitter mobile)</label>
+            <label for="hide_url_thumb" data-lang="css_hide_url_thumb">Hide link related to thumbnails in tweet (à la Twitter mobile)</label>
           </li>
           <li data-setting-name="no_col_icns">
             <input type="checkbox" name="css.no_col_icns" id="no_col_icns">
             <label for="no_col_icns" data-lang="css_no_col_icns">Hide icons in columns headers</label>
           </li>
-          <li data-hidd data-setting-name="no_scrollbars"en-firefox>
+          <li data-hidden-firefox data-setting-name="no_scrollbars">
             <input type="checkbox" name="css.no_scrollbars" id="no_scrollbars">
             <label for="no_scrollbars" data-lang="css_no_scrollbars">Hide scrollbars</label>
           </li>
-          <li data-hidd data-setting-name="slim_scrollbars"en-firefox>
+          <li data-hidden-firefox data-setting-name="slim_scrollbars">
             <input type="checkbox" name="css.slim_scrollbars" id="slim_scrollbars">
             <label for="slim_scrollbars" data-lang="css_slim_scrollbars">Thinner scrollbars</label>
           </li>
@@ -326,14 +326,15 @@
           </li>
           <li data-setting-name="collapse_dms">
             <input type="checkbox" name="css.collapse_dms" id="collapse_dms">
-            <label for="collapse_dms" data-lang="css_collapse_dms" data-new-feat>Collapse read direct messages</label>
+            <label for="collapse_dms" data-lang="css_collapse_dms">Collapse read direct messages</label>
           </li>
           <li data-setting-name="system_fonts">
             <input type="checkbox" name="css.system_fonts" id="system_fonts">
             <label for="system_fonts" data-lang="css_system_fonts" data-new-feat>Use the system font in the UI</label>
           </li data-setting-name="column_width">
           <li>
-            <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns" data-new-feat>Custom width for columns:</label>
+            <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns">Custom width for columns:</label>
+            <small data-lang="css_warning">Be sure of what you're typing here, don't paste something you don't understand!</small>
             <ul data-setting-name="column_size">
               <li>
                 <input disabled type="text" name="custom_columns_width.size" id="column_size"><label for="column_size" data-lang="custom_width_size">Width (in pixels)</label>
