Add option to add search columns in front of first column

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -332,6 +332,10 @@
             <input type="checkbox" name="css.system_fonts" id="system_fonts">
             <label for="system_fonts" data-lang="css_system_fonts" data-new-feat>Use the system font in the UI</label>
           </li data-setting-name="column_width">
+          <li data-setting-name="make_search_columns_first">
+            <input type="checkbox" name="make_search_columns_first" id="make_search_columns_first">
+            <label for="make_search_columns_first" data-lang="make_search_columns_first" data-new-feat>Add search columns in front of first column</label>
+          </li>
           <li>
             <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost><label for="column_width" data-lang="custom_width_columns">Custom width for columns:</label>
             <small data-lang="css_warning">Be sure of what you're typing here, don't paste something you don't understand!</small>
