Adds an action item to get links to tweets / media / quotes in context.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -222,6 +222,10 @@
             <input type="checkbox" name="mute_source" id="mute_source">
             <label for="mute_source" data-lang="mute_source" data-new-feat>Add a shortcut to mute the source (application) of a tweet in tweets' menu</label>
           </li>
+          <li data-setting-name="context_item">
+            <input type="checkbox" name="context_item" id="context_item">
+            <label for="context_item" data-lang="context_item" data-new-feat>Add shortcut to link all media / quotes of a tweet in order</label>
+          </li>
           <li data-setting-name="hotlink_item">
             <input type="checkbox" name="hotlink_item" id="hotlink_item">
             <label for="hotlink_item" data-lang="hotlink_item" data-new-feat>Add shortcut to hotlink all tweet media</label>
