add menu item to archive a tweet using the internet archive

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -219,6 +219,10 @@
             <input type="checkbox" name="favstar_item" id="favstar_item">
             <label for="favstar_item" data-lang="favstar_item" data-new-feat>Add a "Show in Favstar" item in tweets' menu</label>
           </li>
+          <li data-setting-name="archive_item">
+            <input type="checkbox" name="archive_item" id="archive_item">
+            <label for="archive_item" data-lang="archive_item" data-new-feat>Add a "Archive Tweet" item in tweets' menu</label>
+          </li>
           <li data-setting-name="mute_hashtags">
             <input type="checkbox" name="mute_hashtags" id="mute_hashtags">
             <label for="mute_hashtags" data-lang="mute_hashtags" data-new-feat>Add shortcuts to mute #hashtags in tweets' menu</label>
