--- a/src/options/options.html
+++ b/src/options/options.html
@@ -236,8 +236,8 @@
             <small data-lang="download_filename_format_parameters">You can use the following variables: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code></small>
           </li>
           <li data-setting-name="ctrl_changes_interactions">
-            <input type="checkbox" name="ctrl_changes_interactions" id="ctrl_changes_interactions">
-            <label for="ctrl_changes_interactions" data-lang="ctrl_changes_interactions" data-new-feat>Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download / hotlink will follow the user from the column's owner.</label>
+            <input type="checkbox" name="ctrl_changes_interactions.enabled" id="ctrl_changes_interactions.enabled" data-ghost>
+            <label for="ctrl_changes_interactions.enabled" data-lang="ctrl_changes_interactions__enabled">Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download / hotlink will allow you to follow from the</label> <select name="ctrl_changes_interactions.mode" id="ctrl_changes_interactions.mode" data-lang="ctrl_changes_interactions__mode" disabled data-new-feat><option value="owner" data-lang="ctrl_changes_interactions__mode__owner">column's owner</option><option value="prompt" data-lang="ctrl_changes_interactions__mode__dialog">follow dialog</option></select></label>
           </li>
         </ul>
       </div>
