:bulb: use the actual infos from the manifest for version/icons/name in settings and elsewhere

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -8,9 +8,9 @@
 <body>
 <div class="save-bar">
   <div class="topbar-logo">
-    <img src="img/icon-sidebar.png" alt="" class="topbar-icon">
+    <img alt="" class="topbar-icon">
     <span class="topbar-name">
-      Better TweetDeck <br>
+      <span class="topbar-ext-name">Better TweetDeck</span>
       <small class="topbar-version-number">v3.0.0</small>
     </span>
   </div>
