--- a/src/options/options.html
+++ b/src/options/options.html
@@ -11,7 +11,7 @@
     <img alt="" class="topbar-icon">
     <span class="topbar-name">
       <span class="topbar-ext-name">Better TweetDeck</span>
-      <small class="topbar-version-number">v3.0.0</small>
+      <small class="topbar-version-number"></small>
     </span>
   </div>
   <div class="save-wrap">
@@ -237,7 +237,7 @@
           </li>
           <li data-setting-name="ctrl_changes_interactions">
             <input type="checkbox" name="ctrl_changes_interactions.enabled" id="ctrl_changes_interactions.enabled" data-ghost>
-            <label for="ctrl_changes_interactions.enabled" data-lang="ctrl_changes_interactions__enabled">Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download / hotlink will allow you to follow from the</label> <select name="ctrl_changes_interactions.mode" id="ctrl_changes_interactions.mode" data-lang="ctrl_changes_interactions__mode" disabled data-new-feat><option value="owner" data-lang="ctrl_changes_interactions__mode__owner">column's owner</option><option value="prompt" data-lang="ctrl_changes_interactions__mode__dialog">follow dialog</option></select></label>
+            <label for="ctrl_changes_interactions.enabled" data-lang="ctrl_changes_interactions__enabled">Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download / hotlink will allow you to follow from the</label> <select name="ctrl_changes_interactions.mode" id="ctrl_changes_interactions.mode" disabled data-new-feat><option value="owner" data-lang="ctrl_changes_interactions__mode__owner">column's owner</option><option value="prompt" data-lang="ctrl_changes_interactions__mode__dialog">follow dialog</option></select></label>
           </li>
         </ul>
       </div>
