--- a/src/options/options.html
+++ b/src/options/options.html
@@ -353,6 +353,14 @@
             <input type="checkbox" name="collapse_columns" id="collapse_columns">
             <label for="collapse_columns" data-lang="collapse_columns" data-new-feat>Add a column header button to collapse and uncollapse columns.</label>
           </li>
+          <li data-setting-name="collapse_columns_pause">
+            <input type="checkbox" name="collapse_columns_pause" id="collapse_columns_pause">
+            <label for="collapse_columns_pause" data-lang="collapse_columns_pause" data-new-feat>When you collapse a column, it will pause the feed it so that it can light up when its contents change while collapsed and it stays where you last saw it.</label>
+          </li>
+          <li data-setting-name="uncollapse_columns_unpause">
+            <input type="checkbox" name="uncollapse_columns_unpause" id="uncollapse_columns_unpause">
+            <label for="uncollapse_columns_unpause" data-lang="uncollapse_columns_unpause" data-new-feat>When you uncollapse a column, it will unpause the feed it so that it automatically scrolls back to the top instead of staying where you left it.</label>
+          </li>
         </ul>
       </div>
       <button class="save-button" disabled data-lang="save_no">No changes</button>
