scheduler notes: reader beware, you're in for a scare

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -246,7 +246,7 @@
           <li data-setting-name="two_eight_zero_chars">
             <input type="checkbox" name="two_eight_zero_chars" id="two_eight_zero_chars">
             <label for="two_eight_zero_chars" data-lang="two_eight_zero_chars" data-new-feat>Switch the characters limit to 280 <strong>EXPERIMENTAL, USE AT YOUR OWN RISK</strong></label><br>
-            <small data-lang="two_eight_zero_note">This works by tricking TweetDeck into counting up to 140 characters, twice, so you'll see 140 instead of 280 in the counter but going over 140 will give you another set of 140 characters.</small>
+            <small data-lang="two_eight_zero_note">This works by tricking TweetDeck into counting up to 140 characters, twice, so you'll see 140 instead of 280 in the counter but going over 140 will give you another set of 140 characters.  The scheduler still works, but not with tweets over 140 characters due to API restrictions.</small>
           </li>
         </ul>
       </div>
