:ledger: add credits for the 280-char code

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -464,7 +464,11 @@
         <ul class="settings-contributors">
           <li>
             <a href="https://github.com/no-boot-device" target="_blank">no-boot-device</a>
-            <small>That Old Replies Trick</small>
+            <small>That Old Replies Trick using deciders</small>
+          </li>
+          <li>
+            <a href="https://github.com/Zemnmez/" target="_blank">Zemnmez</a>
+            <small>Base for the 280-characters limit code</small>
           </li>
         </ul>
 
