edit button just as dangerous, installed more signs
 - added big disclaimer on the edit feature
 - edited tweets will no longer appear with html entities in them

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -213,6 +213,7 @@
           <li data-setting-name="edit_item">
             <input type="checkbox" name="edit_item" id="edit_item">
             <label for="edit_item" data-lang="edit_item" data-new-feat>Add an edit item in tweets' menu</label>
+            <br /><small data-lang="edit_item_note">You cannot use this to edit tweets without deleting them! This immediately move a tweet to the composer dock and delete it along with any likes or retweets it received!</small>
           </li>
           <li data-setting-name="favstar_item">
             <input type="checkbox" name="favstar_item" id="favstar_item">
