:ledger: credits and stuff

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -460,11 +460,7 @@
         <ul class="settings-contributors">
           <li>
             <a href="https://github.com/no-boot-device" target="_blank">no-boot-device</a>
-            <small>That Old Replies Trick using deciders</small>
-          </li>
-          <li>
-            <a href="https://github.com/Zemnmez/" target="_blank">Zemnmez</a>
-            <small>Base for the 280-characters limit code</small>
+            <small>That Old Replies Trick using deciders and <a href="https://gist.github.com/no-boot-device/cb63762000e606e50690911cac1bcead">webcrack</a></small>
           </li>
         </ul>
 
