--- a/src/options/options.html
+++ b/src/options/options.html
@@ -329,6 +329,10 @@
             <input type="checkbox" name="css.gray_icns_notifs" id="gray_icns_notifs">
             <label for="gray_icns_notifs" data-lang="css_gray_icns_notifs">Notifications icons are in grayscale</label>
           </li>
+          <li data-setting-name="character_count">
+            <input type="checkbox" name="css.character_count" id="collapse_dms">
+            <label for="character_count" data-lang="css_character_count" data-new-feat>Always show the character count instead of the circular progress bar</label>
+          </li>
           <li data-setting-name="collapse_dms">
             <input type="checkbox" name="css.collapse_dms" id="collapse_dms">
             <label for="collapse_dms" data-lang="css_collapse_dms">Collapse read direct messages</label>
