:bug: fix id of character_count setting

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -330,7 +330,7 @@
             <label for="gray_icns_notifs" data-lang="css_gray_icns_notifs">Notifications icons are in grayscale</label>
           </li>
           <li data-setting-name="character_count">
-            <input type="checkbox" name="css.character_count" id="collapse_dms">
+            <input type="checkbox" name="css.character_count" id="character_count">
             <label for="character_count" data-lang="css_character_count" data-new-feat>Always show the character count instead of the circular progress bar</label>
           </li>
           <li data-setting-name="collapse_dms">
