--- a/src/options/options.html
+++ b/src/options/options.html
@@ -286,7 +286,7 @@
       </div>
     </section>
 
-    <section class="content-block" id="visual">
+    <section class="content-block" id="interface">
       <h2 class="section-title" data-lang="sec_interface">Interface</h2>
 
       <div class="settings-section">
