--- a/src/options/options.html
+++ b/src/options/options.html
@@ -25,7 +25,7 @@
       <nav class="sidebar-nav">
         <a href="#tweets" class="nav-item -selected" data-lang="sec_tweetsName">Tweets: name & time</a>
         <a href="#tweetsDisplay" class="nav-item" data-lang="sec_tweetsDisplay">Tweets: display</a>
-        <a href="#visual" class="nav-item" data-lang="sec_interface">Interface</a>
+        <a href="#interface" class="nav-item" data-lang="sec_interface">Interface</a>
         <a href="#content" class="nav-item" data-lang="sec_content">Content</a>
         <a href="#share" class="nav-item" data-lang="shared_btd_h1">Sharing</a>
       </nav>
