Add the tweet ID params to the filename of the downloaded media

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -238,7 +238,7 @@
           <li data-setting-name="download_filename_format">
             <input type="text" name="download_filename_format" id="download_filename_format"><label for="download_filename_format" data-lang="download_filename_format" data-new-feat>Download file name format</label>
             <br />
-            <small data-lang="download_filename_format_parameters">You can use the following variables: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code></small>
+            <small data-lang="download_filename_format_parameters">You can use the following variables: <code>{{postedUser}} {{tweetId}} {{fileName}} {{fileExtension}}</code></small>
           </li>
           <li data-setting-name="ctrl_changes_interactions">
             <input type="checkbox" name="ctrl_changes_interactions.enabled" id="ctrl_changes_interactions.enabled" data-ghost>
