--- a/src/options/options.html
+++ b/src/options/options.html
@@ -301,9 +301,9 @@
             <input type="checkbox" name="css.minimal_mode" id="minimal_mode">
             <label for="minimal_mode" data-lang="css_minimal_mode">Enable the "Minimal" theme</label>
           </li>
-          <li data-setting-name="dark_mode">
-            <input type="checkbox" name="css.dark_mode" id="dark_mode">
-            <label for="dark_mode" data-lang="css_dark_mode">Enable a dark theme style similar to Twitters Dark Mode</label>
+          <li data-setting-name="night_mode">
+            <input type="checkbox" name="css.night_mode" id="night_mode">
+            <label for="night_mode" data-lang="css_night_mode">Enable a dark theme style similar to Twitter's Night Mode</label>
           </li>
           <li data-setting-name="no_col_icns">
             <input type="checkbox" name="css.no_col_icns" id="no_col_icns">
