Add locale texts for the "Re-enable Dark Theme" setting and translate it into Japanese

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -299,7 +299,7 @@
           <li data-setting-name="og_dark_theme">
             <input type="checkbox" name="css.og_dark_theme" id="og_dark_theme">
             <label for="og_dark_theme" data-lang="css_og_dark_theme">Re-enable the Dark theme (pre February 2018)</label>
-            <small>This is experimental and can break at any point!</small>
+            <small data-lang="css_experimental_warning">This is experimental and can break at any point!</small>
           </li>
           <li data-setting-name="no_col_icns">
             <input type="checkbox" name="css.no_col_icns" id="no_col_icns">
