:cookie: naive implementation of custom CSS

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -28,6 +28,7 @@
         <a href="#interface" class="nav-item" data-lang="sec_interface">Interface</a>
         <a href="#content" class="nav-item" data-lang="sec_content">Content</a>
         <a href="#share" class="nav-item" data-lang="shared_btd_h1">Sharing</a>
+        <a href="#custom-css" class="nav-item">Custom CSS</a>
       </nav>
 
       <h3 class="sidebar-title">Meta</h3>
@@ -483,6 +484,12 @@
           </li>
         </ul>
       </div>
+    </section>
+
+    <section class="content-block" id="custom-css">
+      <h2>Custom CSS</h2>
+
+      <textarea name="custom_css_style" cols="30" rows="10"></textarea>
     </section>
   </main>
 </div>
