:wrench: ace editor integration

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -488,8 +488,8 @@
 
     <section class="content-block" id="custom-css">
       <h2>Custom CSS</h2>
-
-      <textarea name="custom_css_style" cols="30" rows="10"></textarea>
+      
+      <div name="custom_css_style" id="custom-css-editor"></div>
     </section>
   </main>
 </div>
