:ledger: warning text

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -488,6 +488,10 @@
 
     <section class="content-block" id="custom-css">
       <h2>Custom CSS</h2>
+
+      <p>
+        ⚠️ Pasting unknown code in this editor can lead to weird issues if you don't know what you're doing ⚠️
+      </p>
       
       <div name="custom_css_style" id="custom-css-editor"></div>
     </section>
