:ledger: add links to the website

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -43,6 +43,7 @@
       <nav class="sidebar-nav">
         <a href="https://twitter.com/BetterTDeck" class="nav-item">@BetterTDeck</a>
         <a href="https://github.com/eramdam/BetterTweetDeck" class="nav-item">GitHub</a>
+        <a href="https://better.tw" class="nav-item">Website</a>
       </nav>
     </div>
   </aside>
