setting option file

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -236,6 +236,10 @@
             <br />
             <small data-lang="download_filename_format_parameters">You can use the following variables: <code>{{postedUser}} {{tweetId}} {{fileName}} {{fileExtension}}</code></small>
           </li>
+          <li data-setting-name="keep_hashtags">
+            <input type="checkbox" name="keep_hashtags" id="keep_hashtags">
+            <label for="keep_hashtags" data-lang="keep_hashtags" data-new-feat>Keep tweeted hashtags</label>
+          </li>
           <li data-setting-name="ctrl_changes_interactions">
             <input type="checkbox" name="ctrl_changes_interactions.enabled" id="ctrl_changes_interactions.enabled" data-ghost>
             <label for="ctrl_changes_interactions.enabled" data-lang="ctrl_changes_interactions__enabled">Holding <kbd>ctrl</kbd> while clicking: favorite / retweet / download / hotlink will allow you to follow from the</label> <select name="ctrl_changes_interactions.mode" id="ctrl_changes_interactions.mode" disabled data-new-feat><option value="owner" data-lang="ctrl_changes_interactions__mode__owner">column's owner</option><option value="prompt" data-lang="ctrl_changes_interactions__mode__dialog">follow dialog</option></select></label>
