--- a/src/options/options.html
+++ b/src/options/options.html
@@ -28,6 +28,7 @@
         <a href="#interface" class="nav-item" data-lang="sec_interface">Interface</a>
         <a href="#content" class="nav-item" data-lang="sec_content">Content</a>
         <a href="#share" class="nav-item" data-lang="shared_btd_h1">Sharing</a>
+        <a href="#custom-css" class="nav-item">Custom CSS</a>
       </nav>
 
       <h3 class="sidebar-title">Meta</h3>
@@ -484,6 +485,16 @@
           </li>
         </ul>
       </div>
+    </section>
+
+    <section class="content-block" id="custom-css">
+      <h2>Custom CSS</h2>
+
+      <p>
+        ⚠️ Pasting unknown code in this editor can lead to weird issues if you don't know what you're doing ⚠️
+      </p>
+      
+      <div name="custom_css_style" id="custom-css-editor"></div>
     </section>
   </main>
 </div>
