--- a/src/options/options.html
+++ b/src/options/options.html
@@ -311,7 +311,7 @@
             <input type="checkbox" name="css.no_col_icns" id="no_col_icns">
             <label for="no_col_icns" data-lang="css_no_col_icns">Hide icons in columns headers</label>
           </li>
-          <li data-hidden-firefox data-setting-name="no_scrollbars">
+          <li data-setting-name="no_scrollbars">
             <input type="checkbox" name="css.no_scrollbars" id="no_scrollbars">
             <label for="no_scrollbars" data-lang="css_no_scrollbars">Hide scrollbars</label>
           </li>
