--- a/src/options/options.html
+++ b/src/options/options.html
@@ -372,6 +372,10 @@
             <input type="checkbox" name="uncollapse_columns_unpause" id="uncollapse_columns_unpause">
             <label for="uncollapse_columns_unpause" data-lang="uncollapse_columns_unpause" data-new-feat>When you uncollapse a column, it will unpause the feed it so that it automatically scrolls back to the top instead of staying where you left it.</label>
           </li>
+          <li data-setting-name="send_with_enter">
+            <input type="checkbox" name="send_with_enter" id="send_with_enter">
+            <label for="send_with_enter" data-lang="send_with_enter" data-new-feat>Press enter to send tweet</label>
+          </li>
         </ul>
       </div>
       <button class="save-button" disabled data-lang="save_no">No changes</button>
