--- a/src/options/options.html
+++ b/src/options/options.html
@@ -373,7 +373,7 @@
             <label for="uncollapse_columns_unpause" data-lang="uncollapse_columns_unpause" data-new-feat>When you uncollapse a column, it will unpause the feed it so that it automatically scrolls back to the top instead of staying where you left it.</label>
           </li>
           <li>
-            <input type="checkbox" name="custom_icons.enabled" id="icons" data-ghost><label for="icons" data-lang="custom_icons">Custom Icons:</label>
+            <input type="checkbox" name="custom_icons.enabled" id="icons" data-ghost><label for="icons" data-lang="custom_icons" data-new-feat>Custom Icons:</label>
             <ul data-setting-name="feather">
               <li>
                 <input disabled type="radio" name="custom_icons.mode" id="feather"><label for="feather" data-lang="custom_icons_feather">Feather Icons</label>
