:tada: Initial font-awesome addition
Needs major size/position tweaking

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -377,7 +377,10 @@
             <ul data-setting-name="feather">
               <li>
                 <input disabled type="radio" name="custom_icons.mode" id="feather"><label for="feather" data-lang="custom_icons_feather">Feather Icons</label>
-              </li data-setting-name="material">
+              </li>
+              <li>
+                <input disabled type="radio" name="custom_icons.mode" id="font_awesome"><label for="font_awesome" data-lang="custom_icons_font_awesome">Font Awesome</label>
+              </li>
               <li>
                 <input disabled type="radio" name="custom_icons.mode" id="material"><label for="material" data-lang="custom_icons_material">Material Icons</label>
               </li>
