:tada: Initial Ionic icons addition

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -382,6 +382,9 @@
                 <input disabled type="radio" name="custom_icons.mode" id="font_awesome"><label for="font_awesome" data-lang="custom_icons_font_awesome">Font Awesome</label>
               </li>
               <li>
+                <input disabled type="radio" name="custom_icons.mode" id="ionic"><label for="ionic" data-lang="custom_icons_ionic">Ionic Icons</label>
+              </li>
+              <li>
                 <input disabled type="radio" name="custom_icons.mode" id="material"><label for="material" data-lang="custom_icons_material">Material Icons</label>
               </li>
             </ul>
