:wrench: surface option for BTD logo

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -418,6 +418,10 @@
               <label for="uncollapse_columns_unpause" data-lang="uncollapse_columns_unpause" data-new-feat>When you uncollapse a column, it will unpause the feed it so that it automatically scrolls back to the top
                 instead of staying where you left it.</label>
             </li>
+            <li data-setting-name="btd_logo">
+              <input type="checkbox" name="btd_logo" id="btd_logo">
+              <label for="btd_logo" data-lang="btd_logo">Change TweetDeck's logo in the left bottom corner for Better TweetDeck's logo</label>
+            </li>
           </ul>
         </div>
         <button class="save-button" disabled data-lang="save_no">No changes</button>
