:sparkles: Add feature to reduce amount of loaded DMs

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -282,6 +282,10 @@
               </select>
               </label>
             </li>
+            <li data-setting-name="conversation_entry_cut">
+              <input type="checkbox" name="conversation_entry_cut" id="conversation_entry_cut">
+              <label for="conversation_entry_cut" data-lang="conversation_entry_cut" data-new-feat>Reduce amount of loaded direct messages (10 instead of 100 per opening) to save performance</label>
+            </li>
           </ul>
         </div>
 
