[add] option settings

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -98,6 +98,12 @@
                 <small>Applies only for non-relative timestamps</small>
               </label>
             </li>
+            <li>
+              <input type="checkbox" name="date_from_sf" id="date_from_sf">
+              <label data-lang="date_from_sf" for="date_from_sf">Parse date from SnowFlake
+                <small>Time in milliseconds can be displayed</small>
+              </label>
+            </li>
           </ul>
         </div>
 
