--- a/src/options/options.html
+++ b/src/options/options.html
@@ -100,7 +100,7 @@
             </li>
             <li>
               <input type="checkbox" name="date_from_sf" id="date_from_sf">
-              <label data-lang="date_from_sf" for="date_from_sf">Parse date from SnowFlake
+              <label data-lang="parse_sf" for="date_from_sf">Parse date from SnowFlake
                 <small>Time in milliseconds can be displayed</small>
               </label>
             </li>
