🇯🇵 Add some data-lang attributes on options.html and update Japanese translations.
Signed-off-by: TAKAHASHI Shuuji <shuuji3@gmail.com>

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -30,7 +30,7 @@
           <a href="#interface" class="nav-item" data-lang="sec_interface">Interface</a>
           <a href="#content" class="nav-item" data-lang="sec_content">Content</a>
           <a href="#share" class="nav-item" data-lang="shared_btd_h1">Sharing</a>
-          <a href="#custom-css" class="nav-item">Custom CSS</a>
+          <a href="#custom-css" class="nav-item" data-lang="sec_custom_css">Custom CSS</a>
         </nav>
 
         <h3 class="sidebar-title">Meta</h3>
@@ -46,7 +46,7 @@
         <nav class="sidebar-nav">
           <a href="https://twitter.com/BetterTDeck" class="nav-item">@BetterTDeck</a>
           <a href="https://github.com/eramdam/BetterTweetDeck" class="nav-item">GitHub</a>
-          <a href="https://better.tw" class="nav-item">Website</a>
+          <a href="https://better.tw" class="nav-item" data-lang="sec_website">Website</a>
         </nav>
       </div>
     </aside>
@@ -563,9 +563,9 @@
       </section>
 
       <section class="content-block" id="custom-css">
-        <h2>Custom CSS</h2>
+        <h2 data-lang="custome_css_title">Custom CSS</h2>
 
-        <p>
+        <p data-lang="custome_css_p1">
           ⚠️ Pasting unknown code in this editor can lead to weird issues if you don't know what you're doing ⚠️
         </p>
 
