:cookie: support of custom CSS scrollbars in Firefox
Works only on Firefox 64+ thanks to the new `scrollbar-width` and `scrollbar-color` standard properties

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -357,7 +357,7 @@
               <input type="checkbox" name="css.no_scrollbars" id="no_scrollbars">
               <label for="no_scrollbars" data-lang="css_no_scrollbars">Hide scrollbars</label>
             </li>
-            <li data-hidden-firefox data-setting-name="slim_scrollbars">
+            <li data-setting-name="slim_scrollbars">
               <input type="checkbox" name="css.slim_scrollbars" id="slim_scrollbars">
               <label for="slim_scrollbars" data-lang="css_slim_scrollbars">Thinner scrollbars</label>
             </li>
